<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">User GitHub Test</string>
    <string name="list_user_github_title">List User</string>
    <string name="user_profile_location">Location</string>
    <string name="user_profile_blog">Blog</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_notification_channel_id">NotificationChanel</string>
    <string name="fcm_message">C4P FCM Message</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email or phone number</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="create_an_account">Create an account</string>
    <string name="social_sign_in_desc">Or continue with a social account</string>
    <string name="title_activity_side_menu">SideMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="welcome">Welcome</string>
    <string name="donate">Donate</string>
    <string name="save">Save</string>
    <string name="start_a_fundraiser">Start a fundraiser</string>
    <string name="donate_desc">Browse Organizations To Support</string>
    <string name="save_desc">Browse Coupons To Redeem Points</string>
    <string name="start_a_fundraiser_desc">Create a new campaign</string>
    <string name="sign_out">Sign out</string>
    <string name="my_campaigns">My campaigns</string>
    <string name="my_coupons">My coupons</string>
    <string name="refer_friend">Refer friend</string>
    <string name="contact_us">Contact us</string>
    <string name="delete_account">Delete account</string>
    <string name="delete">Delete</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="fundraisers">Fundraisers</string>
    <string name="deals">Deals</string>
    <string name="favourites">Favourites</string>
    <string name="notifications">Notifications</string>
    <string name="myc4p">My Stuff</string>
    <string name="search">Type to search</string>
    <string name="deal_recommended">Recommended deals for you</string>
    <string name="fundraisers_near_you">Fundraisers near you</string>
    <string name="see_all">See all</string>
    <string name="see_all_deal_categories">See all deal categories</string>
    <string name="fundraisers_description">Raise money for a good cause</string>
    <string name="fundraisers_create">CREATE FUNDRAISER</string>
    <string name="browse_deal">Browse Deals</string>
    <string name="rewards">Rewards (Redeem Points)</string>
    <string name="browse_fundraise">Browse Fundraisers</string>
    <string name="donate_or_fundraise">Donate or Share (Earn Points)</string>
    <string name="ref_code_not_exist">Referral code does not exist!</string>
    <string name="identifier_code_not_found">Invalid participant</string>
    <string name="donation_participant_not_active">Participant is disabled</string>
    <string name="create_account_success_title">Congratulations</string>
    <string name="create_account_success_message">Your account has been created successfully!</string>
    <string name="loading">Loading…</string>
    <string name="update_phone_desc1">Please take a moment to add/verify your mobile phone number and update if necessary.</string>
    <string name="update_phone_desc2">We will send you a code via text message to confirm your new phone number.</string>
    <string name="guest">Guest</string>
    <string name="existed_email_error">This username already exists.</string>
    <string name="existed_phone_error">This username already exists.</string>
    <string name="default_error">Something went wrong!</string>
    <string name="donation_participant_can_not_be_donor">Invalid participant</string>
    <string name="otp_expired">OTP is expired</string>
    <string name="default_error_wrong_password">Password is wrong. Please try again!</string>
    <string name="user_password_invalid">Your password is incorrect</string>
    <string name="user_account_disable">Sorry, Your account was disabled recently, please contact system administrator!</string>
    <string name="user_username_not_found">Your email/phone number is incorrect</string>
    <string name="user_username_not_found_phone_number">This phone number is not associated with your account. Sign in with your email address or double-check phone number entered.</string>
    <string name="user_username_not_found_email">This email address is not associated with your account. Sign in with your phone number or double-check email address entered.</string>
    <string name="user_limited_access">Due to the business logic of the system, your {roleName} account not able to sign in from this app, Please check with admin for details, Thanks!</string>
    <string name="user_limited_access_reset_password">Due to the business logic of the system, your {roleName} account not able to reset password from this app, Please check with admin for details, Thanks!</string>
    <string name="create_account_field_required">This field is required</string>
    <string name="create_account_field_required_first_name">First name is required</string>
    <string name="create_account_field_required_last_name">Last name is required</string>
    <string name="create_account_field_required_email">Email address or phone number is required</string>
    <string name="create_account_field_required_password_confirm">Confirm password is required</string>
    <string name="create_account_field_required_password">Password is required</string>
    <string name="create_account_invalid_phone_number">Your phone number is not valid</string>
    <string name="create_account_invalid_email_address">Your email/phone number is not valid</string>
    <string name="create_account_invalid_phone_9_character">Phone number must have at least 9 characters</string>
    <string name="create_account_invalid_email">Your email is not valid</string>
    <string name="create_account_desc">By continue with Facebook or Google, we’ll import your name, profile photo and friend list.</string>
    <string name="create_account_desc2">By creating account, you agree to our terms of use, privacy policy and cookie policy.</string>
    <string name="hide">Hide</string>
    <string name="create_account_check_8_characters">Password must have at least 8 characters, and contain UPPER CASE, lower case, special character and number</string>
    <string name="create_account_check_8_characters_confirm">Confirm password must have at least 8 characters, and contain UPPER CASE, lower case, special character and number</string>
    <string name="create_account_check_confirm_password">Your password does not match</string>
    <string name="create_account_check_confirm_password_8_characters">Your confirm password must have at least 8 characters</string>
    <string name="create_account_check_password_8_characters">Your password must have at least 8 characters</string>
    <string name="create_account_check_password_valid">Your password is not valid</string>
    <string name="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s…</string>
    <string name="write_comment">WRITE COMMENT</string>
    <string name="add">ADD</string>
    <string name="add2">Add</string>
    <string name="campaign_managers">Campaign manager(s)</string>
    <string name="write_update">WRITE UPDATE</string>
    <string name="comments">Comments</string>
    <string name="campaign_managers_title">Campaign managers</string>
    <string name="add_campaign_managers_title">Add campaign managers</string>
    <string name="updates">Updates</string>
    <string name="conditions">Conditions</string>
    <string name="conditions_to_redeem">Conditions to redeem</string>
    <string name="donors">Donors</string>
    <string name="no_donors">No donors</string>
    <string name="participants">Participants</string>
    <string name="no_participants">No participants</string>
    <string name="no_commemt">No comments</string>
    <string name="no_campaign">No campaign manager</string>
    <string name="no_log">No logs</string>
    <string name="read_comments">Read all %1$s comments</string>
    <string name="read_comment">Read all %1$s comment</string>
    <string name="read_manager">View all %1$s campaign manager</string>
    <string name="read_managers">View all %1$s campaign managers</string>
    <string name="read_logs">Read all %1$s updates</string>
    <string name="read_log">Read all %1$s update</string>
    <string name="read_donors">View all %1$s donors</string>
    <string name="read_donor">View all %1$s donor</string>
    <string name="read_participants">View all %1$s participants</string>
    <string name="read_participant">View all %1$s participant</string>
    <string name="donation_content_card_popup">Processing fee of 2.9% plus $.30</string>
    <string name="donation_content_bank_popup">Processing fee of 0.8% (capped at $5)</string>
    <string name="raised_points_desc">helped raise {amount} in total donations by sharing with friends and earned {points} free points!</string>
    <string name="raised_point_desc">helped raise {amount} in total donations by sharing with friends and earned {points} free point!</string>
    <string name="raised_no_points_desc">joined the campaign as a participant.</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="lbl_set_profile_photo">Choose Photo</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="personal_details">User details</string>
    <string name="name_profile">Name</string>
    <string name="email_profile">Email</string>
    <string name="btn_browse_deal">Browse Deals</string>
    <string name="no_data_my_claim_deal">You haven\'t claimed any deal!</string>
</resources>